<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_gradient_background"
    tools:context=".view.authorization.verification_success.VerificationSuccessActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/logo_with_title"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@id/form_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintBounds" />
    <ImageView
        android:id="@+id/form_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:src="@drawable/white_rectangle_rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_verification_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/verification_success_page_title_content_description"
        android:text="@string/title_verification_success"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/form_background"
        app:layout_goneMarginTop="32dp" />

    <TextView
        android:id="@+id/tv_can_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/can_login_text"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_enjoy_snack"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/enjoy_text"
        android:textStyle="italic"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_success"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/go_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
